조회수 기능 추가 - 레디스로 하루동안 동일 사용자 중복 조회수 증가 방지

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -18,7 +18,9 @@
                 <header class="mb-4">
                     <h1 class="fw-bolder mb-1" th:text="*{title}"></h1>
                     <div class="text-muted fst-italic mb-2"
-                         th:text="|Posted on ${#temporals.format(article.createdAt, 'yyyy-MM-dd HH:mm')} By *{author}|"></div>
+                         th:text="|Posted on ${#temporals.format(article.createdAt, 'yyyy-MM-dd HH:mm')} By *{author}|">
+                    </div>
+                    <p th:text="|조회수 : ${article.views}|"></p>
                 </header>
                 <section class="mb-5">
                     <p class="fs-5 mb-4" th:text="*{content}"></p>
