--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
     <style>
+        .article-container {
+            display: flex;
+            align-items: center; /* 수직 정렬 */
+        }
+
+        .article-container a {
+            margin-right: 10px; /* 링크와 댓글 수 사이에 공간 추가 */
+        }
+
+        .article-container span {
+            color: #888; /* 댓글 수 텍스트 색상 */
+        }
         /* 전체 pagination 컨테이너 스타일 */
         #pagination {
             text-align: center;
@@ -145,7 +157,11 @@
             <tr th:each="article, iter : ${articles}">
                 <td th:text="${iter.count}"></td> <!--번호-->
                 <td>
-                    <a th:href="@{/articles/{id}(id=${article.id})}" th:text="${article.title}"></a> <!--제목-->
+                    <div class="article-container">
+                        <a th:href="@{/articles/{id}(id=${article.id})}"
+                           th:text="${article.title}"></a>
+                        <span th:text="|[${article.countComment}]|"></span>
+                    </div>
                 </td>
                 <td> <!--작성일-->
                     <span th:if="${#temporals.format(article.createdAt.toLocalDate(), 'yyyy-MM-dd').equals(#temporals.format(currentDate, 'yyyy-MM-dd'))}"
