--- a/src/main/resources/templates/oauthLogin.html
+++ b/src/main/resources/templates/oauthLogin.html
@@ -4,75 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-
-    <style>
-        .gradient-custom {
-            background: #6a11cb;
-            background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-            background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-            justify-content: center;
-            align-items: center;
-        }
-        .card {
-            border-radius: 1rem;
-        }
-
-        .social-icon {
-            width: 55px;
-            height: 55px;
-        }
-
-        .social-icons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .alert {
-            display: block;
-            clear: both;
-            margin-bottom: 1rem;
-        }
-        .form-group {
-            margin-bottom: 10px;
-        }
-
-        #login-btn {
-            margin-top: 15px;
-        }
-
-        .btn-block {
-            margin-bottom: 10px;
-        }
-        .divider {
-            display: flex;
-            align-items: center;
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .divider::before,
-        .divider::after {
-            content: "";
-            flex: 1;
-            border-bottom: 1px solid #fff;
-        }
-
-        .divider::before {
-            margin-right: 15px;
-        }
-
-        .divider::after {
-            margin-left: 15px;
-        }
-
-        .divider p {
-            margin: 0;
-            color: white;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="/style/loginPage.css">
 </head>
 <body class="gradient-custom">
 <section class="d-flex vh-100">
