회원 탈퇴 안되는 버그 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,6 +36,7 @@
     <h4 class="mb-3">블로그에 오신 것을 환영합니다.</h4>
 </div>
 </body>
+<script src="/js/article.js"></script>
 <script>
     const userDelButton = document.getElementById('user-del-dtn');
 
