--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -43,6 +43,11 @@
                     <p class="fs-5 mb-4" th:text="*{content}"></p>
 
                     <!-------------------댓글 입력 창------------------->
+                    <div sec:authorize="isAnonymous()">
+                        <div class="alert alert-warning" role="alert">
+                            <a href="/login" class="alert-link">로그인</a>후에 댓글에 참여해보세요!
+                        </div>
+                    </div>
                     <div sec:authorize="isAuthenticated()" data-v-afadf0bc="" class="CommentWriter">
                         <div data-v-afadf0bc="" class="comment_inbox">
                             <em th:text="${#authentication.getName()}" data-v-afadf0bc="" class="comment_inbox_name"></em>
@@ -60,17 +65,38 @@
                     <div class="comment_list mt-4" id="comment-list">
                         <div th:each="comment : ${article.comments}" class="comment-item mb-3">
                             <input type="hidden" id="comment-id" th:value="${comment.id}">
-                            <div class="comment-header">
-                                <div class="d-flex align-items-center">
+
+                            <div class="comment-header d-flex align-items-start">
+                                <div class="d-flex align-items-start flex-grow-1">
                                     <a class="author-name fw-bold" th:text="${comment.author}"
                                        th:onclick="|location.href='@{/myPage(author=${comment.author})}'|"></a>
                                     <span th:if="${comment.isAuthor()}"
                                           class="badge bg-success ms-2">작성자</span>
                                 </div>
-                                <div class="text-muted fst-italic"
-                                     th:text="${#temporals.format(comment.createdAt, 'yyyy.MM.dd. HH:mm')}"></div>
                             </div>
-                            <div class="comment-content fs-5" th:text="${comment.comment}"></div>
+
+                            <div class="d-flex align-items-center position-relative">
+                                <div class="comment-content fs-5 flex-grow-1" th:text="${comment.comment}"></div>
+                                <input type="text" class="form-control d-none" style="flex-grow: 1;" />
+                                <button th:if="${#authentication.getName().equals(comment.author)}"
+                                        class="btn btn-link p-0 ms-3" style="margin-left: auto"
+                                        type="button" onclick="toggleOptions(this)">
+                                    <img src="/images/menu.png" alt="options" style="width: 20px; height: 20px;">
+                                </button>
+                                <ul class="options-menu list-unstyled position-absolute" style="display: none; left: 100%; top: 0; margin-left: 5px;">
+                                    <li><button class="dropdown-item"
+                                           onclick="editComment(this)">수정하기</button></li>
+                                    <li><button class="dropdown-item text-danger"
+                                           onclick="deleteComment(this)">삭제하기</button></li>
+                                </ul>
+                                <div class="edit-buttons d-none" style="margin-top: 5px;">
+                                    <button class="btn btn-primary btn-sm" onclick="saveEdit(this)">수정</button>
+                                    <button class="btn btn-secondary btn-sm" onclick="cancelEdit(this)">취소</button>
+                                </div>
+                            </div>
+
+                            <div class="text-muted fst-italic"
+                                 th:text="${#temporals.format(comment.createdAt, 'yyyy.MM.dd. HH:mm')}"></div>
                             <hr class="comment-divider">
                         </div>
                     </div>
@@ -81,6 +107,7 @@
     </div>
 </div>
 <script src="/js/article.js"></script>
-<script src="/js/comment.js"></script>
+<script src="/js/addComment.js"></script>
+<script src="/js/editComment.js"></script>
 </body>
 </html>
