--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -20,7 +20,7 @@
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <h1 class="fw-bolder mb-1" th:text="*{title}"></h1>
                         <div th:if="${#authentication.getName() == article.author}">
-                            <a class="btn btn-primary text-white" id="modify-btn"
+                            <a class="btn btn-primary text-white"
                                th:onclick="|location.href='@{/new-article?id={articleId}(articleId=${article.id})}'|">
                                 수정
                             </a>
@@ -106,6 +106,7 @@
         </div>
     </div>
 </div>
+<script src="/js/article.js"></script>
 <script src="/js/editComment.js"></script>
 <script src="/js/addComment.js"></script>
 </body>
