사용자 삭제 시 연관된 엔티티 제거 쿼리 최적화

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -56,7 +56,7 @@
                         </div>
                         <div data-v-afadf0bc="" class="comment_attach"></div>
                         <div data-v-afadf0bc="" class="register_box">
-                            <a id="submit-btn" data-v-afadf0bc="" href="#" role="button" class="button btn_register">등록</a>
+                            <a id="submit-btn" data-v-afadf0bc="" href="javascript:void(0)" role="button" class="button btn_register">등록</a>
                         </div>
                     </div>
                     <!-------------------댓글 입력 창------------------->
