게시글과 댓글에도 프로필 이미지 나오도록 추가

--- a/src/main/resources/static/style/article.css
+++ b/src/main/resources/static/style/article.css
@@ -18,6 +18,12 @@ hr.my-3 {
     border-top: 1px solid #dee2e6; /* 회색 구분선 */
 }
 
+.img-fluid{
+    width: 35px;
+    height: 35px;
+    margin-right: 2px
+}
+
 .CommentWriter {
     background-color: #f9f9f9; /* 배경색을 밝게 설정 */
     border-radius: 8px; /* 모서리를 둥글게 */
