--- a/src/main/resources/static/style/article.css
+++ b/src/main/resources/static/style/article.css
@@ -18,11 +18,19 @@ hr.my-3 {
     border-top: 1px solid #dee2e6; /* 회색 구분선 */
 }
 
-.img-fluid{
+.img-fluid {
     width: 35px;
     height: 35px;
-    margin-right: 2px
+    margin-right: 2px;
+    cursor: pointer;
 }
+
+.icon-images {
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+}
+
 
 .CommentWriter {
     background-color: #f9f9f9; /* 배경색을 밝게 설정 */
