--- a/src/main/resources/templates/newArticle.html
+++ b/src/main/resources/templates/newArticle.html
@@ -33,6 +33,6 @@
         </div>
     </div>
 </div>
-<script src="/js/article.js"></script>
-<script src="/js/addComment.js"></script>
+<script type="module" src="/js/article/articleMain.js"></script>
+<script src="/js/article/article.js"></script>
 </body>
