핸드폰 인증 위해 전화번호 필드 추가와 전화번호 입력받도록 수정

--- a/src/main/resources/static/style/loginPage.css
+++ b/src/main/resources/static/style/loginPage.css
@@ -30,6 +30,22 @@
     margin-bottom: 10px;
 }
 
+.form-actions {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.form-actions .link {
+    display: inline-block;
+    margin-right: 15px;
+    color: #007bff;
+    text-decoration: none;
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
 #login-btn {
     margin-top: 15px;
 }
